Labs/01 Install minikube &  argocd/clusters/server/dev/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: server
spec:
  template:
    spec:
      containers:
        - name: server
          image: jporeilly/gitops:latest
