Labs/01 Install minikube &  argocd/clusters/server/dev/server-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server
  namespace: server
spec:
  rules:
  - host: server-dev.fake
    http:
      paths:
      - path: /
        backend:
          serviceName: server
          servicePort: http
